--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "placemein-web",
   "private": true,
@@ -12,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
